Name update (Glenda)

--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="index.css">
-    <title>Archiving Demo</title>
+    <title>GLENDA: Running SPARQL Queries on RDF Archives</title>
     <script src="https://d3js.org/d3.v5.js"></script>
     <link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" />
     <script src="https://unpkg.com/@triply/yasgui/build/yasgui.min.js"></script>
     <script src="app.js" defer></script>
 </head>
 <body>
-<h1>Archiving Demo</h1>
+<h1>GLENDA: Running SPARQL Queries on RDF Archives</h1>
 <div class="main">
     <div class="tab">
         <button class="tablinks" onclick="openQueryTab(event,'queries')" id="defaultOpen">Queries</button>
