--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -24,7 +24,6 @@
                     <select name="queries-select" id="queries-select" onchange="handleQuerySelect(this)"></select>
                     <label for="queries-select"></label>
                 </span>
-                <span>
                 <form name="query-type-form" id="query-type-form">
                     <span class="querysellabel">Query Type: </span>
                     <input type="radio" id="vm" name="query-type" value="vm" onclick="onClickQueryType(this)" checked>
@@ -33,18 +32,17 @@
                     <label for="dm" class="tooltip">DM<span class="tooltiptext">Delta Materialization: Query a changeset between two versions</span></label>
                     <input type="radio" id="vq" name="query-type" value="vq" onclick="onClickQueryType(this)">
                     <label for="vq" class="tooltip">VQ<span class="tooltiptext">Version Query: Annotate solutions with the version when they occur</span></label>
-                </span>
-                <div class="version-selector" id="start-version-selector">
-                        <label class="querysellabel" for="start-version-range" id="start-version-value">Start version: </label>
-                        <input type="range" id="start-version-range" name="start-version-range" min="0" max="32" step="1" onchange="onSliderUpdate(this)">
-                        <output for="start-version-range" id="start-version-output"></output>
-                    </div>
-                    <div class="version-selector" id="end-version-selector">
-                        <label class="querysellabel" for="end-version-range" id="end-version-value">End version: </label>
-                        <input type="range" id="end-version-range" name="end-version-range" min="0" max="32" step="1" onchange="onSliderUpdate(this)">
-                        <output for="end-version-range" id="end-version-output"></output>
-                    </div>                    
                 </form>
+                <div class="version-selector" id="start-version-selector">
+                    <label class="querysellabel" for="start-version-range" id="start-version-value">Start version: </label>
+                    <input type="range" id="start-version-range" name="start-version-range" min="0" max="32" step="1" onchange="onSliderUpdate(this)">
+                    <output for="start-version-range" id="start-version-output"></output>
+                </div>
+                <div class="version-selector" id="end-version-selector">
+                    <label class="querysellabel" for="end-version-range" id="end-version-value">End version: </label>
+                    <input type="range" id="end-version-range" name="end-version-range" min="0" max="32" step="1" onchange="onSliderUpdate(this)">
+                    <output for="end-version-range" id="end-version-output"></output>
+                </div>
             </div>
             <br>
             <div id="yasgui"></div>
@@ -55,7 +53,7 @@
               });
             </script>
             <div class="queryButtons">
-                <button class="resetbtn" onclick="resetQuery(yasgui)">RESET</button>
+                <button class="resetbtn" onclick="resetQuery()">RESET</button>
             </div>
         </div>
     </div>
