--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -61,12 +61,37 @@
     <div id="statistics" class="tabcontent">
         <div class="query-options-panel"><span class="querysellabel">Statistics for the BEAR-C dataset</span>
         <div id="statistics-panel" class="grid-container">
-            <div id="plot-change-ratio" class="grid-item"></div>
-            <div id="plot-dynamicity" class="grid-item"></div>
-            <div id="plot-growth-ratio" class="grid-item"></div>
-            <div id="plot-entity-change" class="grid-item"></div>
-            <div id="plot-triple-entity-change" class="grid-item"></div>
-            <div id="plot-object-updates" class="grid-item"></div>
+            <div id="plot-change-ratio" class="grid-item tooltip-graph">
+                <span class="tooltiptext">
+                    The change-ratio is a measure of the magnitude of changes with respect to the size of the data.
+                </span>
+            </div>
+            <div id="plot-dynamicity" class="grid-item tooltip-graph">
+                <span class="tooltiptext">
+                    The vocabulary-dynamicity measure the amount of vocabulary terms (IRIs, literals, or blank nodes) present in a changeset (i, j) relative to the total amount of terms in the graph i and j.
+
+                </span>
+            </div>
+            <div id="plot-growth-ratio" class="grid-item tooltip-graph">
+                <span class="tooltiptext">
+                    The growth-ratio measure the growth of the data from one version to the next.
+                </span>
+            </div>
+            <div id="plot-entity-change" class="grid-item tooltip-graph">
+                <span class="tooltiptext">
+                    The entity-changes metric measure the number of entities that were added or deleted between two versions fo the data.
+                </span>
+            </div>
+            <div id="plot-triple-entity-change" class="grid-item tooltip-graph">
+                <span class="tooltiptext">
+                    The triple-to-entity-change metric show the average number of triples involved in an entity-change.
+                </span>
+            </div>
+            <div id="plot-object-updates" class="grid-item tooltip-graph">
+                <span class="tooltiptext">
+                    Object updates are changes of triples (s p o1) to (s p o2) which were not part of any entity-change.
+                </span>
+            </div>
         </div>
         </div>
     </div>
