proxy the sparql endpoint via the webserver so that we don't need to expose it

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -49,7 +49,7 @@
             <div id="yasgui"></div>
             <script>
               const yasgui = new Yasgui(document.getElementById("yasgui"), {
-                requestConfig: { endpoint: `http://${self.location.hostname}:42564/sparql` },
+                requestConfig: { endpoint: `${self.location.origin}/sparql` },
                 copyEndpointOnNewTab: true,
               });
             </script>
